Ensure body is justified center on small-height screens.

--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -53,6 +53,10 @@ section > .center__container {
 /* #region Breakpoints */
 
 @media only screen and (max-height: 465px) {
+    body {
+        justify-content: center;
+    }
+    
     section.hide__small {
 		display: none;
 	}
